--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* 전역 box-sizing */
+*, *::before, *::after {
+  box-sizing: border-box;
+}
